--- a/index.html
+++ b/index.html
@@ -15,14 +15,23 @@
             <div class="console-buttons">
                 <div class="d-pad">
                     <div class="d-pad-up"></div>
-                    <div class="d-pad-left"></div>
-                    <div class="d-pad-center"></div>
-                    <div class="d-pad-right"></div>
                     <div class="d-pad-down"></div>
+                    <div class="d-pad-left"></div>
+                    <div class="d-pad-right"></div>
+                </div>
+                <div class="d-pad">
+                    <div class="d-pad-up"></div>
+                    <div class="d-pad-down"></div>
+                    <div class="d-pad-left"></div>
+                    <div class="d-pad-right"></div>
                 </div>
                 <div class="buttons-group">
-                    <div class="button-a">A</div>
                     <div class="button-b">B</div>
+                    <div class="button-a">A</div>
+                </div>
+                <div class="start-select">
+                    <div class="button-start">Start</div>
+                    <div class="button-select">Select</div>
                 </div>
             </div>
             
