--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
         <!--===== FOOTER =====-->
         <footer class="footer">
-            <p class="footer__copy">&#169; Copyright 2024</p>
+            <p class="footer__copy"><small>&#169; Copyright 2025</small></p>
             <div class="footer-social">
                 <a href="https://github.com/AbisoyeOnanuga/" class="social__link" target="_blank">
                     <i class='bx bxl-github'></i>
