--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
         <title>Retro Game Console - Abisoye Onanuga</title>
         <!-- Include retro font from Google Fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Monaco&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="gameboy-advance">
