add control instructions

--- a/index.html
+++ b/index.html
@@ -272,6 +272,19 @@
                 <div class="button-a">A</div>
             </div>
         </div>
+        <div class="instructions">
+            <h2>Controls</h2>
+            <ul>
+                <li><strong>D-pad Up:</strong> Scroll Up</li>
+                <li><strong>D-pad Down:</strong> Scroll Down</li>
+                <li><strong>D-pad Left:</strong> Shift+Tab</li>
+                <li><strong>D-pad Right:</strong> Tab</li>
+                <li><strong>Start:</strong> Enter</li>
+                <li><strong>Select:</strong> Backspace</li>
+                <li><strong>A Button:</strong> Enter</li>
+                <li><strong>B Button:</strong> Backspace</li>
+            </ul>
+        </div>
 
         <!--===== FOOTER =====-->
         <footer class="footer">
